# monocoque

./: .gitignore  embedder.py  main.cpp  meson.build  readme.md
subprojects/: sdl2.wrap
